--- a/css/styles.css
+++ b/css/styles.css
@@ -72,62 +72,6 @@
     color: #f6d321;
 }
 
-@media (max-width: 575px) {
-    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item {
-        color: #fff700;
-    }
-    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:hover,
-    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-        color: #f6d321;
-    }
-    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item.active {
-        color: #f6d321;
-        background-color: #c0392b;
-    }
-}
-
-@media (max-width: 767px) {
-    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item {
-        color: #fff700;
-    }
-    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:hover,
-    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-        color: #f6d321;
-    }
-    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item.active {
-        color: #f6d321;
-        background-color: #c0392b;
-    }
-}
-
-@media (max-width: 991px) {
-    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item {
-        color: #fff700;
-    }
-    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:hover,
-    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-        color: #f6d321;
-    }
-    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item.active {
-        color: #f6d321;
-        background-color: #c0392b;
-    }
-}
-
-@media (max-width: 1199px) {
-    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item {
-        color: #fff700;
-    }
-    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
-    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-        color: #f6d321;
-    }
-    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item.active {
-        color: #f6d321;
-        background-color: #c0392b;
-    }
-}
-
 .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item {
     color: #fff700;
 }
@@ -145,9 +89,6 @@
     font-weight: bold;
     text-shadow: 2px 2px 3px black;
 }
-#nav {
-    background-color: #000000;
-}
 body {
     background: url(/images/usa.jpg);
     background-size: cover;
@@ -158,21 +99,15 @@ body {
 .navbar {
     background-color: #000;
 }
-.indexphoto {
-    width: 100%;
-    height: auto;
-    border-radius: 5%;
-}
-.square {
-    background-color: black;
+.textindex {
     color: white;
-    border-radius: 5%;
-    text-align: justify;
+    text-shadow: 2px 2px 5px blue;
 }
-.square > h2 {
+.textindex h2 {
     text-align: center;
 }
-.square, .indexphoto, .carousel-inner {
+
+.textindex, .indexphoto, .carousel-inner {
     box-shadow: 0 20px 30px rgba(0,0,0,0.7);
 }
 .carousel-inner {
@@ -188,13 +123,44 @@ body {
     position: absolute;
 }
 .activeworker {
-    animation: moveright 3s 1s ease forwards;
+    animation: moveright 3s 0s ease-out forwards;
 }
 @keyframes moveright {
     0% {
-        right: 96%;
+        right: 95%;
     }
     100% {
         right: 0%;
     }
+}
+
+.textindex {
+    background-color: rgba(0, 0, 0, 0.9);
+}
+.footer {
+    background-color: black;
+    height: 99px;
+    color: white;
+}
+.footer span img {
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    transition: transform 0.3s
+}
+.footer span a:nth-of-type(1) img:hover {
+    background-color: #3B5998;
+    transform: scale(1.2);
+    transform: scale(1.2) rotate(-5deg)
+}
+.footer span a:nth-of-type(2) img:hover {
+    background-color: #FF0000;
+    transform: scale(1.2) rotateX(-20deg);
+}
+.footer span a:nth-of-type(3) img:hover {
+    background-color: #e4405f;
+    transform: scale(1.2) rotate(5deg);
+}
+.footer p {
+    margin: 0;
 }
