--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ body {
     margin-bottom: 15px;
 }
 .worker {
-    height: 100px;
+    height: 120px;
     position: absolute;
 }
 .activeworker {
@@ -199,6 +199,13 @@ body {
 .modal-body p {
     text-align: justify;
 }
+.modal-content {
+    background-color: #F7F7F7;
+}
+.modal-header {
+    background-color: #ECECEC;
+}
+
 
 @media screen and (max-width: 992px) and (min-width: 768px) {
     .textindex span {
