--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,20 @@ body {
     color: #FFD700;
     font-size: 1.5rem;
 }
-
+.contactInfo a:link {
+    text-decoration: none;
+    color: black;
+}
+address {
+    font-style: italic;
+    font-size: 1.1rem;
+}
+.phone {
+    font-size: 1.8rem;
+}
+.email {
+    font-size: 1.5rem;
+}
 
 @media screen and (max-width: 992px) and (min-width: 768px) {
     .textindex span {
